--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,91 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tilMoneyIn"
+        android:layout_width="396dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraints"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+            <TextView
+                android:id="@+id/tvIncome"
+                android:layout_width="162dp"
+                android:layout_height="67dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="25dp"
+                android:drawableLeft="@drawable/income"
+                android:text="Money in
+                             kes 42500"
+                app:layout_constraintEnd_toStartOf="@+id/tvMoneyOut"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvMoneyOut"
+            android:layout_width="175dp"
+            android:layout_height="70dp"
+            android:layout_marginEnd="16dp"
+            android:drawableLeft="@drawable/expense"
+            android:text="money out
+                           kes 23700"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tvIncome"
+            app:layout_constraintTop_toTopOf="@+id/tvIncome" />
+
+        <TextView
+                android:id="@+id/tvBalance"
+                android:layout_width="146dp"
+                android:layout_height="64dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
+                android:drawableLeft="@drawable/balance"
+                android:text="Balance
+                      kees2700"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvIncome" />
+
+            <TextView
+                android:id="@+id/tvTransactions"
+                android:layout_width="201dp"
+                android:layout_height="61dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
+                android:drawableLeft="@drawable/transactions"
+                android:text="Transactions
+                       8"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/tvBalance"
+                app:layout_constraintTop_toBottomOf="@+id/tvMoneyOut" />
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/tvExpenditure"
+        android:id="@+id/rvExpense"
         android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:layout_height="542dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvBalance" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/rvExpensess"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
