--- a/app/src/main/res/layout/enexpenditure.xml
+++ b/app/src/main/res/layout/enexpenditure.xml
@@ -4,182 +4,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/etDividends"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginBottom="16dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="16dp">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tilMoneyIn"
-        android:layout_width="396dp"
-        android:layout_height="wrap_content" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraints"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tvIncome"
-            android:layout_width="162dp"
-            android:layout_height="67dp"
-            android:layout_marginStart="8dp"
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="49dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
-            android:drawableLeft="@drawable/income"
-            android:text="Money in
-                             kes 42500"
+            app:layout_constraintEnd_toStartOf="@+id/tvmoney"
+            app:layout_constraintHorizontal_bias="0.312"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/income_trx" />
+
+        <TextView
+            android:id="@+id/tvamount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="167dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="300dp"
+            android:text="Salary"
+            app:layout_constraintEnd_toStartOf="@+id/tvDate"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tvMoneyOut"
-            android:layout_width="175dp"
-            android:layout_height="70dp"
-            android:layout_marginEnd="16dp"
-            android:drawableLeft="@drawable/expense"
-            android:text="money out
-                           kes 23700"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tvIncome"
-            app:layout_constraintTop_toTopOf="@+id/tvIncome" />
+            android:id="@+id/tvmoney"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="22dp"
+            android:layout_marginTop="9dp"
+            android:layout_marginEnd="135dp"
+            android:text="kes 45678"
+            app:layout_constraintEnd_toStartOf="@+id/tvDate"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/tvamount" />
 
         <TextView
-            android:id="@+id/tvBalance"
-            android:layout_width="146dp"
-            android:layout_height="64dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
-            android:drawableLeft="@drawable/balance"
-            android:text="Balance
-                      kees2700"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvIncome" />
-
-        <TextView
-            android:id="@+id/tvTransactions"
-            android:layout_width="201dp"
-            android:layout_height="61dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="16dp"
-            android:drawableLeft="@drawable/transactions"
-            android:text="Transactions
-                       8"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tvBalance"
-            app:layout_constraintTop_toBottomOf="@+id/tvMoneyOut" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilSalary"
-            android:layout_width="0dp"
+            android:id="@+id/tvDate"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="64dp"
+            android:layout_marginEnd="32dp"
+            android:text="23/05/2024"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvBalance">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etSalary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/expense_trx"
-                android:hint="Salary" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tvRent"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tilSalary">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etRent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/income_trx"
-                android:hint="rent
-           " />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tvDividents"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvRent">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etDivide"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Dividends"
-                android:drawableLeft="@drawable/expense_trx"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tvElectricity"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvDividents">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etElectricity"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Electricity"
-                android:drawableLeft="@drawable/income_trx"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tvInternet"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvElectricity">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etInternet"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Internet"
-                android:drawableLeft="@drawable/expense_trx"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tvshopping"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvInternet">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etShopping"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Shopping"
-                android:drawableLeft="@drawable/income_trx"/>
-        </com.google.android.material.textfield.TextInputLayout>
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </com.google.android.material.card.MaterialCardView>
